--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,19 @@
     font-family: 'Roboto-medium';
     src: url('../font/roboto-medium.ttf');
 }
-
 .font-robotoslab-bold{
     font-family: 'Roboto-slab-bold';
 }
 .font-roboto-bold{
     font-family: 'Roboto-bold';
 }
-
+.font-roboto-regular{
+    font-family: 'Roboto-regular';
+}
+.font-roboto-medium
+{
+    font-family: 'Roboto-medium';
+}
 
 .header
 {
@@ -62,6 +67,9 @@ nav ul li a{
     border-radius: 30px; 
     background: #28CE74; 
     padding: 15px 0px;
+    box-shadow: 3px 5px 12px #0d629c;
+    letter-spacing: 1px;
+    line-height: 2;
 }
 .btn-hire-white
 {
@@ -76,6 +84,7 @@ nav ul li a{
 .row-margin
 {
     margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 .align-work
@@ -151,5 +160,26 @@ nav ul li a{
 {
     padding: 35px 0px;
 }
-
-  
+.work-description
+{
+    font-size: 18px;
+    line-height: 1.3;
+}
+.work-header
+{
+    font-size: 18px;
+    height: 45px;
+}
+.tech-title
+{
+    text-align: center;
+    margin-top: 30px;
+}
+.middle-bar .btn-hire
+{
+    margin-top: 40px;
+}
+.recruit-row
+{
+    margin-top: 20px;
+}
