--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ nav ul li a{
 .circle-back
 {
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 130px;
+    height: 130px;
     display: inline-block;
 }
 .circle-back::before
@@ -116,8 +116,8 @@ nav ul li a{
     content: " ";
     border-radius: 50%;
     background-color: #ffffff;
-    width: 80px;
-    height: 80px;
+    width: 130px;
+    height: 130px;
     opacity: 0.2;
     z-index: inherit;
     top: 0;
@@ -129,16 +129,17 @@ nav ul li a{
     position: absolute;
     border-radius: 50%;
     background-color: #ffffff;
-    width: 50px;
-    height: 50px;
+    width: 85px;
+    height: 85px;
     opacity: 0.3;
-    top: 15px;
-    left: 15px;
+    top: 23px;
+    left: 23px;
     z-index: 2;
 }
 .rating
 {
-    margin: -60px 0 40px 75px;
+    margin: -87px 0 80px;
+    font-size: 30px;
 }
 .ti-angle-down
 {
@@ -178,8 +179,14 @@ nav ul li a{
 .middle-bar .btn-hire
 {
     margin-top: 40px;
+    
+}
+.middle-bar
+{
+    background-image: linear-gradient(to right, #398AC4 , #1EB2E9);
 }
 .recruit-row
 {
     margin-top: 20px;
+
 }
