--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ nav ul li a{
     border-radius: 30px; 
     background: #28CE74; 
     padding: 15px 0px;
-    box-shadow: 3px 5px 12px #0d629c;
+    box-shadow: 0px 4px 10px #00000042;
     letter-spacing: 1px;
     line-height: 2;
 }
