--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,7 +43,7 @@
     .tech-title
     {
         text-align: left;
-        margin-left: 8%;
+        margin-left: 0;
         margin-top: 0px;
     }
     .main .btn-hire
