--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 @media (min-width: 576px) {
     .logo {
-        max-width: 75%;
+        max-width: 250px;
     }
     .tech-img { text-align: center; }
     .tech-img img {
@@ -22,12 +22,16 @@
     {
         height: 675px;
     }
+    #person
+    {
+        padding: 0px 35px;   
+    }
     
 }
   
 @media (min-width: 768px) {
     .logo {
-        max-width: 75%;
+        max-width: 250px;
     }
     .tech-img img {
         float: right;
@@ -63,7 +67,7 @@
   
 @media (min-width: 992px) {
     .logo {
-        max-width: 100%;
+        max-width: 280px;
     }
     .header .main
     {
